--- a/public/index.html
+++ b/public/index.html
@@ -54,46 +54,49 @@
     });
 
     async function handleFile(file) {
-      if (!file) return;
-      statusEl.classList.remove("hidden");
-      statusEl.textContent = "Compressing... Please wait.";
+  if (!file) return;
+  statusEl.classList.remove("hidden");
+  statusEl.textContent = "Compressing... Please wait.";
 
-      let fileType = "";
-      if (file.type.startsWith("image/")) fileType = "image";
-      else if (file.type.startsWith("video/")) fileType = "video";
-      else if (file.type.startsWith("audio/")) fileType = "audio";
-      else {
-        statusEl.textContent = "❌ Unsupported file type.";
-        return;
-      }
+  let fileType = "";
+  if (file.type.startsWith("image/")) fileType = "image";
+  else if (file.type.startsWith("video/")) fileType = "video";
+  else if (file.type.startsWith("audio/")) fileType = "audio";
+  else {
+    statusEl.textContent = "❌ Unsupported file type.";
+    return;
+  }
 
-      const formData = new FormData();
-      formData.append("file", file);
+  const formData = new FormData();
+  formData.append("file", file);
 
-      try {
-        const response = await fetch(`https://filesizecompressor.onrender.com/compress/${fileType}`, {
-          method: "POST",
-          body: formData,
-        });
+  try {
+    const response = await fetch(`https://filesizecompressor.onrender.com/compress/${fileType}`, {
+      method: "POST",
+      body: formData,
+    });
 
-        if (!response.ok) throw new Error("Compression failed");
+    if (!response.ok) throw new Error(`Compression failed (status: ${response.status})`);
 
-        const blob = await response.blob();
+    const blob = await response.blob();
 
-        // Trigger download
-        const url = window.URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = `compressed_${file.name}`;
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
+    // Trigger download
+    const url = window.URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = `compressed_${file.name}`;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    window.URL.revokeObjectURL(url); // release memory
 
-        statusEl.textContent = "✅ File compressed successfully!";
-      } catch (err) {
-        statusEl.textContent = "❌ Error: " + err.message;
-      }
-    }
+    statusEl.textContent = "✅ File compressed successfully!";
+  } catch (err) {
+    console.error(err);
+    statusEl.textContent = "❌ Error: " + err.message;
+  }
+}
+
   </script>
 </body>
 </html>
