--- a/public/index.html
+++ b/public/index.html
@@ -1,102 +1,256 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>File Size Reducer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>File Size Compressor - Image, Audio and Video size reducer</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Glassmorphism container */
+    .glass {
+      background: rgba(32, 35, 42, 0.6);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border-radius: 1.5rem;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      box-shadow:
+        0 4px 30px rgba(0, 0, 0, 0.5);
+    }
+    /* Button glass */
+    .glass-btn {
+      background: rgba(88, 99, 242, 0.8);
+      box-shadow:
+        0 8px 32px 0 rgba(88, 99, 242, 0.4);
+      transition: background-color 0.3s ease;
+    }
+    .glass-btn:hover,
+    .glass-btn:focus {
+      background: rgba(88, 99, 242, 1);
+      box-shadow:
+        0 10px 40px 0 rgba(88, 99, 242, 0.7);
+    }
+    /* Input drag area border highlight */
+    .dropzone-active {
+      border-color: #5863f2 !important; /* Indigo */
+      background: rgba(88, 99, 242, 0.15) !important;
+      box-shadow: 0 0 15px rgba(88, 99, 242, 0.7);
+    }
+    /* Spinner */
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white shadow-lg rounded-2xl p-8 w-full max-w-md text-center">
-    <h1 class="text-2xl font-bold mb-6">File Size Reducer</h1>
+<body class="bg-gradient-to-tr from-[#121217] to-[#1d1f27] min-h-screen flex items-center justify-center px-5 font-sans text-gray-300">
+
+  <main class="glass max-w-md w-full p-10">
+    <h1 class="text-4xl font-extrabold mb-8 text-white select-none text-center tracking-wide">File Size Compressor</h1>
 
     <!-- Drag & Drop Zone -->
-    <div id="dropZone" 
-         class="border-2 border-dashed border-gray-300 rounded-xl p-8 cursor-pointer 
-                hover:bg-gray-50 transition">
-      <p class="text-gray-600">Drag & Drop your file here<br>or click to select</p>
-      <input type="file" id="fileInput" class="hidden" />
+    <div id="dropZone"
+      tabindex="0"
+      role="button"
+      aria-label="File upload drop zone. Press Enter or Space to select a file. Drag and drop a file here."
+      class="glass border-2 border-dashed border-gray-600 rounded-3xl p-12 cursor-pointer focus:outline-none focus:ring-4 focus:ring-indigo-500 transition text-center select-none text-gray-400 hover:text-indigo-400"
+    >
+      <!-- Cloud Upload Icon -->
+<svg xmlns="http://www.w3.org/2000/svg" class="mx-auto mb-5 h-20 w-20 stroke-current" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+  <path d="M16.88 9.94A5 5 0 005.82 8.41 4.5 4.5 0 0012 17.5h4a4 4 0 000-8h-.12z" />
+  <path d="M12 12v6m-3-3l3-3 3 3" />
+</svg>
+      <p class="text-lg font-medium">
+        Drag &amp; Drop your file here
+        <span class="block mt-2 text-indigo-400 underline cursor-pointer">or click to browse</span>
+      </p>
+
+      <input type="file" id="fileInput" class="hidden" aria-hidden="true" />
     </div>
 
+    <!-- File info -->
+    <div id="fileInfo" class="mt-6 text-indigo-400 font-semibold truncate hidden" title="">
+      <p><span id="fileName"></span> - <span id="fileSize"></span></p>
+    </div>
+
+    <!-- Compress button -->
+    <button
+      id="compressBtn"
+      disabled
+      class="w-full mt-8 py-3 rounded-xl text-white font-semibold glass-btn shadow-lg disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-4 focus:ring-indigo-500"
+      aria-live="polite"
+    >
+      Compress File
+    </button>
+
     <!-- Status Message -->
-    <p id="status" class="mt-4 text-gray-600 hidden"></p>
-  </div>
+    <p id="status" role="alert" class="mt-6 text-center text-lg font-semibold break-words min-h-[1.5em]"></p>
 
-  <script>
-    const dropZone = document.getElementById("dropZone");
-    const fileInput = document.getElementById("fileInput");
-    const statusEl = document.getElementById("status");
+  </main>
 
-    // Handle clicks on dropzone
-    dropZone.addEventListener("click", () => fileInput.click());
+<script>
+  const dropZone = document.getElementById("dropZone");
+  const fileInput = document.getElementById("fileInput");
+  const statusEl = document.getElementById("status");
+  const fileInfo = document.getElementById("fileInfo");
+  const fileNameEl = document.getElementById("fileName");
+  const fileSizeEl = document.getElementById("fileSize");
+  const compressBtn = document.getElementById("compressBtn");
 
-    // Drag & Drop events
-    dropZone.addEventListener("dragover", (e) => {
-      e.preventDefault();
-      dropZone.classList.add("bg-gray-50", "border-blue-400");
-    });
+  let selectedFile = null;
 
-    dropZone.addEventListener("dragleave", () => {
-      dropZone.classList.remove("bg-gray-50", "border-blue-400");
-    });
+  function setStatus(message, type = "normal") {
+    statusEl.textContent = "";
+    statusEl.className = "mt-6 text-center text-lg font-semibold break-words min-h-[1.5em]";
+    if (type === "error") {
+      statusEl.classList.add("text-red-500");
+    } else if (type === "success") {
+      statusEl.classList.add("text-green-400");
+    } else if (type === "loading") {
+      statusEl.classList.add("text-indigo-400","flex","justify-center","items-center","gap-2");
+      statusEl.innerHTML = `
+        <svg class="animate-spin h-6 w-6 text-indigo-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
+        </svg> ${message}
+      `;
+      return;
+    }
+    statusEl.textContent = message;
+  }
 
-    dropZone.addEventListener("drop", (e) => {
-      e.preventDefault();
-      dropZone.classList.remove("bg-gray-50", "border-blue-400");
+  // Format bytes as human readable
+  function formatFileSize(bytes) {
+    const sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
+    if (bytes === 0) return '0 Bytes';
+    const i = Math.floor(Math.log(bytes) / Math.log(1024));
+    return (bytes / Math.pow(1024, i)).toFixed(2) + ' ' + sizes[i];
+  }
+
+  function showFileInfo(file) {
+    fileNameEl.textContent = file.name;
+    fileSizeEl.textContent = formatFileSize(file.size);
+    fileInfo.classList.remove("hidden");
+    fileInfo.title = `${file.name} (${formatFileSize(file.size)})`;
+    compressBtn.disabled = false;
+    setStatus("", "normal");
+  }
+
+  function clearFile() {
+    selectedFile = null;
+    fileInfo.classList.add("hidden");
+    compressBtn.disabled = true;
+    setStatus("", "normal");
+  }
+
+  function handleFile(file) {
+    if (!file) return clearFile();
+
+    const allowedTypes = ['image/', 'video/', 'audio/'];
+    if (!allowedTypes.some(type => file.type.startsWith(type))) {
+      setStatus("❌ Unsupported file type. Please select an image, video, or audio file.", "error");
+      return clearFile();
+    }
+
+    selectedFile = file;
+    showFileInfo(file);
+  }
+
+  // Drag & Drop zone styling helper
+  function activateDropZone() {
+    dropZone.classList.add("dropzone-active");
+  }
+  function deactivateDropZone() {
+    dropZone.classList.remove("dropzone-active");
+  }
+
+  dropZone.addEventListener("dragover", e => {
+    e.preventDefault();
+    activateDropZone();
+  });
+
+  dropZone.addEventListener("dragleave", e => {
+    e.preventDefault();
+    deactivateDropZone();
+  });
+
+  dropZone.addEventListener("drop", e => {
+    e.preventDefault();
+    deactivateDropZone();
+    if (e.dataTransfer.files.length > 0) {
       handleFile(e.dataTransfer.files[0]);
-    });
+    }
+  });
 
-    // Fallback file input
-    fileInput.addEventListener("change", () => {
-      if (fileInput.files.length) {
-        handleFile(fileInput.files[0]);
-      }
-    });
+  // Keyboard interaction for drop zone (to open file picker)
+  dropZone.addEventListener("keydown", e => {
+    if (e.key === "Enter" || e.key === " ") {
+      e.preventDefault();
+      fileInput.click();
+    }
+  });
 
-    async function handleFile(file) {
-  if (!file) return;
-  statusEl.classList.remove("hidden");
-  statusEl.textContent = "Compressing... Please wait.";
+  dropZone.addEventListener("click", () => {
+    fileInput.click();
+  });
 
-  let fileType = "";
-  if (file.type.startsWith("image/")) fileType = "image";
-  else if (file.type.startsWith("video/")) fileType = "video";
-  else if (file.type.startsWith("audio/")) fileType = "audio";
-  else {
-    statusEl.textContent = "❌ Unsupported file type.";
-    return;
-  }
+  fileInput.addEventListener("change", () => {
+    if (fileInput.files.length > 0) {
+      handleFile(fileInput.files[0]);
+    }
+  });
 
-  const formData = new FormData();
-  formData.append("file", file);
+  compressBtn.addEventListener("click", async () => {
+    if (!selectedFile) return;
 
-  try {
-    const response = await fetch(`https://filesizecompressor.onrender.com/compress/${fileType}`, {
-      method: "POST",
-      body: formData,
-    });
+    setStatus("Compressing... Please wait.", "loading");
+    compressBtn.disabled = true;
+    dropZone.classList.add("pointer-events-none", "opacity-70");
 
-    if (!response.ok) throw new Error(`Compression failed (status: ${response.status})`);
+    const fileType = selectedFile.type.startsWith("image/") ? "image"
+      : selectedFile.type.startsWith("video/") ? "video"
+      : selectedFile.type.startsWith("audio/") ? "audio"
+      : "";
 
-    const blob = await response.blob();
+    if (!fileType) {
+      setStatus("❌ Unsupported file type.", "error");
+      compressBtn.disabled = false;
+      dropZone.classList.remove("pointer-events-none", "opacity-70");
+      return;
+    }
 
-    // Trigger download
-    const url = window.URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = `compressed_${file.name}`;
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    window.URL.revokeObjectURL(url); // release memory
+    const formData = new FormData();
+    formData.append("file", selectedFile);
 
-    statusEl.textContent = "✅ File compressed successfully!";
-  } catch (err) {
-    console.error(err);
-    statusEl.textContent = "❌ Error: " + err.message;
-  }
-}
+    try {
+      const response = await fetch(`https://filesizecompressor.onrender.com/compress/${fileType}`, {
+        method: "POST",
+        body: formData,
+      });
 
-  </script>
+      if (!response.ok) throw new Error(`Compression failed (status: ${response.status})`);
+
+      const blob = await response.blob();
+
+      // Trigger download
+      const url = window.URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = `compressed_${selectedFile.name}`;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      window.URL.revokeObjectURL(url);
+
+      setStatus("✅ File compressed successfully!", "success");
+      clearFile();
+    } catch (err) {
+      console.error(err);
+      setStatus("❌ Error: " + err.message, "error");
+    } finally {
+      compressBtn.disabled = true;
+      dropZone.classList.remove("pointer-events-none", "opacity-70");
+    }
+  });
+</script>
+
 </body>
 </html>
