fixed some ui issue with dragzone

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     .dropzone { position:relative; margin:16px 0; border:2px dashed rgba(255,255,255,0.18); border-radius: calc(var(--radius)-6px); padding:28px; text-align:center; transition:0.2s ease; cursor:pointer;}
     .dropzone.drag { border-color: var(--accent); box-shadow: inset 0 0 0 2px var(--accent);}
-    .dropzone input[type="file"] { position:absolute; inset:0; opacity:0; cursor:pointer;}
+    .dropzone input[type="file"] { display: none;}
     .dz-icon { width:52px; height:52px; border-radius:14px; display:grid; place-items:center; margin:0 auto 10px; background: linear-gradient(135deg, rgba(79,140,255,0.25), rgba(124,77,255,0.25));}
 
     .file-info { padding:8px 12px; border-radius:12px; background: rgba(255,255,255,0.08); margin-top:12px;}
