--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>File Size Compressor</title>
+    <!-- basics -->
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>File Size Compressor | Compress Images Online Free</title>
+<meta name="description" content="Free online file size compressor. Upload JPG, PNG, or WebP images and reduce file size instantly without losing quality. Fast, secure, no signup required." />
+<link rel="canonical" href="https://filesizecompressor.vercel.app/" />
+<meta name="robots" content="index,follow" />
+
+<!-- Open Graph -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="File Size Compressor — Free Online Tool" />
+<meta property="og:description" content="Compress JPG, PNG, and WebP images online. Fast, secure, no signup." />
+<meta property="og:url" content="https://filesizecompressor.vercel.app/" />
+<meta property="og:image" content="https://filesizecompressor.vercel.app/og-default.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="File Size Compressor — Free Online Tool" />
+<meta name="twitter:description" content="Compress images instantly. Free, fast, secure, no signup." />
+<meta name="twitter:image" content="https://filesizecompressor.vercel.app/og-default.png" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ImageObject",
+  "name": "{{ originalFilename }}",
+  "contentUrl": "{{ compressedImageUrl }}",
+  "encodingFormat": "{{ fileType }}",
+  "uploadDate": "{{ uploadDate }}",
+  "contentSize": "{{ compressedSize }}"
+}
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XW089S8S9P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XW089S8S9P');
+</script>
     <link rel="icon" href="data:," />
     <style>
       :root {
